Changelog
=========

1.4 (unreleased)
----------------


1.3 (2010-01-16)
----------------

- Use a different hook for providing the initial setup of tracked code files.
  In Zope 2.12+ there's a proper event published right before the process has
  started. If this is available we use it, instead of our no longer working
  approach to hook ``setupFinalLogging``.
  [hannosch]

1.2 (2009-11-21)
----------------

- Moved the template reloading support into an extra.
  [hannosch]

- Added test_suite functions to the test modules.
  [hannosch]

1.1 (2009-10-19)
----------------

- Added CMF specific functionality: We support explicitly reloading all file
  system based objects from skins folders while running in production mode.
  [hannosch]

1.0 (2009-10-11)
----------------

- Avoid the `ENABLED` config flag and check against Globals.DevelopmentMode in
  the browser view.
  [hannosch]

- Make sure the import of the Globals module happens after the variable has
  been set. This should make it compatible with Zope 2.10.9+.
  [hannosch]

1.0b1 (2009-08-11)
------------------

- Got the test coverage for the code reloading part up to 100%.
  [hannosch]

- Fixed reloading of the module scope. The func_globals of functions is now
  updated with new names introduced into the module scope, so adding new
  import statements will work.
  [hannosch]

- Specified package dependencies, added development buildout and added
  extensive test coverage.
  [hannosch]

- Figured out a way to support reloading code that uses decorators.
  [hannosch]

0.11 (2009-05-30)
-----------------

- Added the z3c.autoinclude entry point so that plone.reload is automatically
  loaded on Plone 3.3 and above.
  [optilude]

0.10 (2009-03-22)
-----------------

- Do not remove attributes from classes when reloading. ZCML directives and
  other wiring is liable to add attributes to class that will then disappear
  on reload. This means that if you have removed a class attribute, it will